<resources>
    <string name="app_name">PiQ Messenger</string>
    <string name="action_settings">Settings</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="notifications">Notifications</string>
    <string name="chats">Chats</string>
    <string name="status">Status</string>
    <string name="groups">Groups</string>
    <string name="action_search">Search</string>
    <string name="action_new_chat">New Chats</string>
    <string name="action_more">More</string>
    <string name="bio">Bio</string>
    <string name="seen_uploads">Seen Uploads</string>
    <string name="new_uploads">New Uploads</string>
    <string name="title_activity_all_contacts">AllContacts</string>
    <string name="action_unaccepted_req">New Requests</string>
    <string name="title_activity_contacts_act">Friends </string>
    <string name="contacts">Friends</string>
    <string name="new_requests">New Requests</string>
    <string name="title_activity_contacts">ContactsAct</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="type_status">Type Posts Here</string>
    <string name="number_ofwords">318</string>
    <string name="handle">Show Handle</string>
    <string name="posts">Posts</string>
    <string name="add_images">Add Images</string>
    <string name="action_done">Done</string>
    <string name="gifs">Gifs and Videos</string>
    <string name="pics">Images</string>
    <string name="title_activity_contact">Contacts</string>
    <string name="all">All</string>
    <string name="takePht">Take a photo</string>
    <string name="selcamera">Select from gallery</string>
    <string name="cancel">Cancel</string>
    <string name="noImg">No Image Selected</string>
    <string name="upVid">Upload a video</string>
    <string name="upPic">Upload a picture</string>
    <string name="replies">%1$d Replies</string>
    <string name="report_post">Report this post</string>
    <string name="report_agg">Too aggressive</string>
    <string name="report_tribRace">Racial or Tribalistic</string>
    <string name="repor_pblic">Public harm</string>
    <string name="report_hate">Hate speech</string>
    <string name="report">report</string>
    <string name="never_disp">Never show this again</string>
    <string name="hndl_nt">Handle will not be displayed</string>
    <string name="upload_paused">Upload paused!</string>
    <string name="upload_failed">Upload Failed</string>
    <string name="upload_successful">Upload Successful!</string>
    <string name="image_must_be_set">Image must be set!</string>
    <string name="uploading_status">Uploading Status...</string>
    <string name="onlineGifs">Online Gifs and Images</string>
    <string name="images">Images</string>
    <string name="post_sent">Post sent!</string>
    <string name="text_and_image_must_not_be_empty">Error! Add Text or Image!</string>
    <string name="posting">Posting...</string>
    <string name="token_saved">Token Saved! :)</string>
    <string name="Recommended">Recommended</string>
    <string name="minute">%1$d minute(s) ago</string>
    <string name="day">%1$d day(s) ago</string>
    <string name="hour">%1$d hour(s) ago</string>
    <string name="week">%1$d week(s) ago</string>
    <string name="second">%1$d second(s) ago</string>
    <string name="new_message">New message</string>
    <string name="friends">Friends</string>
    <string name="public_">Public</string>
    <string name="private_">Private</string>
    <string name="empty_response">Server sent an empty response.</string>
    <string name="gifs_and_images_by_tenor">Gifs and Images with love from Tenor</string>
    <string name="gifs_and_images_by_giphy">Gifs and Images with love from Giphy</string>
    <string name="empty_result">No more result...</string>
    <string name="error_sending_token">Error sending token...</string>
    <string name="replies_">Replies</string>
    <string name="post_not_found">Post not found.</string>
    <string name="likes_">%1$s like(s)</string>
    <string name="loading">Loading</string>
    <string name="likes">Likes</string>
    <string name="action_reply">Reply</string>
    <string name="show_previous_post">Show previous post</string>
    <string name="title_activity_converse">Converse</string>
    <string name="title_activity_show__status">Show_Status</string>
    <string name="action_send">Send</string>
    <string name="send_a_msg">send a message..</string>
    <string name="today">Today</string>
    <string name="yesterday">yesterday</string>
    <string name="unable_to_load_image">Unable to load Image</string>
    <string name="title_activity_image">ImageActivity</string>
    <string name="select_image">Select Image</string>
    <string name="message">Message</string>
    <string name="action_delete">Delete</string>
    <string name="view_users">View Users</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="profile">Profile</string>
    <string name="more">More</string>
    <string name="fullname">Fullname</string>
    <string name="click_image_to_edit">Click Image to Edit</string>
    <string name="profile_saved">Profile saved...</string>
    <string name="load_more">Load More</string>
    <string name="title_activity_main2">Main2Activity</string>
    <string name="add_friends">Add Friends</string>
    <string name="accept_request">Accept</string>
    <string name="request_sent">Request sent</string>
    <string name="error_fetchin_item">Error fetching items...</string>
    <string name="edit">Edit</string>
    <string name="elipsize">...</string>
    <string name="profile_loading">profile loading, please wait...</string>
    <string name="action_upload">Upload</string>
    <string name="delete_confirm">Are you sure you want to delete this?</string>
    <string name="yes">Yes</string>
    <string name="send_request">Send Request</string>
    <string name="sent_req"><b>\@%1$s</b> sent you a friend request.</string>
    <string name="mention_req"><b>\@%1$s</b> mentioned you in a post.</string>
    <string name="comment_like"><b>\@%1$s</b> liked your comment.</string>
    <string name="add_reply"><b>\@%1$s</b> replied to your comment on a post.</string>
    <string name="send_piccoin"><b>\@%1$s</b> sent you some piccoins.</string>
    <string name="comment_req"><b>\@%1$s</b> commented on your post.</string>
    <string name="acc_req"><b>\@%1$s</b> accepted your request.</string>
    <string name="add_like"><b>\@%1$s</b> liked your post.</string>
    <string name="new_post_by_admin"><b>\@%1$s</b> added a new post.</string>
    <string name="new_post_r"><b>\@%1$s</b> wrote on your profile.</string>
    <string name="check_prof"><b>\@%1$s</b> checked your profile.</string>
    <string name="new_message_have">You may have a new Message.</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="log_in">LOG IN</string>
    <string name="signup">SIGN UP</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="gtThan">Must be greater than %1$d</string>
    <string name="usergtThan">Username must be greater than %1$d</string>
    <string name="inv_user">Invalid Username</string>
    <string name="title_activity_menu_">Menu</string>
    <string name="deleted">Deleted</string>
    <string name="create_a_new_post">Create a new post</string>
    <string name="create_a_new_group">Create a new Group</string>
    <string name="write_a_reply">Write a reply...</string>
    <string name="write_on_profile">Write on \@%1$s\'s profile</string>
    <string name="edit_post">Edit Post</string>
    <string name="newpost">New Post</string>
    <string name="create_status">Create Status</string>
    <string name="action_like">Like</string>
    <string name="action_love">Love</string>
    <string name="action_haha">Haha</string>
    <string name="action_wow">Wow</string>
    <string name="action_sad">Sad</string>
    <string name="action_angry">Angry</string>
    <string name="online_friends">Online friends</string>
    <string name="games_and_fun">Games and fun</string>
    <string name="messages">Messages</string>
    <string name="spend_time_and_earn">Spend time and earn</string>
    <string name="help_translate_and_earn">Help translate and earn</string>
    <string name="help">Help</string>
    <string name="create_avatar">Create Avatar</string>
    <string name="log_out">Log Out</string>
    <string name="birthday_celebrants">Birthday Celebrant</string>
    <string name="log_out_sure">This will log you out.</string>
    <string name="home">Home</string>
    <string name="more_option">More options</string>
    <string name="spend_time">Spend time</string>
    <string name="favourites">Favourites</string>
    <string name="last_seen">Last seen %1$s</string>
    <string name="online">Online</string>
    <string name="offline">Offline</string>
    <string name="join_group">Join</string>
    <string name="leave_group">Leave</string>
    <string name="description">Description</string>
    <string name="group_created">Group created</string>
    <string name="title_activity_message">Message</string>
    <string name="coonect_intro">Connect, Share, Meet...Piccmaq</string>
    <string name="unable_to_load_vid">Unable to load video</string>
    <string name="find_people">Find People</string>
    <string name="group_edited">Group edited..</string>
    <string name="no_result_found">No result found</string>
    <string name="view_members">View members</string>
    <string name="app_desc">Be weird. Share Secrets. Talk About Your Day. Everyone Is Permitted.
        Of Course Except Bullies, Intellectual Thieves And People Younger Than 13.</string>
    <string name="share">Share</string>
    <string name="meet">Meet</string>
    <string name="connect">Connect</string>
    <string name="beYou">Be You</string>
    <string name="storage_perm">Sorry, we need the Storage Permission to do that</string>
    <string name="ok">Ok</string>
    <string name="learn_how_to_use">Learn how to use this app</string>
    <string name="dont_show_again">Dont show again</string>
    <string name="how_to_use_app">Long click any image to view it. Statuses last for only 24 hours. Deactivate images
        in settings to save data. long click reply in view status to view image larger. if zou send a request
        zou will see their public post on zour timeiine even if they havent accepted yet. long click like button for more options
    </string>
    <string name="new_notification">New notification</string>
    <string name="delete_all">Delete all</string>
    <string name="settings">Settings</string>
    <string name="play_sound_like">Play sound on like</string>
    <string name="load_high_quality">Load high quality image</string>
    <string name="images_from_tenor">images will be loaded from Tenor</string>
    <string name="images_from_giphy">images will be loaded from Giphy</string>
    <string name="load_from_tenor">Load Images from Tenor</string>
    <string name="loader0">Loader 0</string>
    <string name="loader1">Loader 1</string>
    <string name="loader2">Loader 2</string>
    <string name="loader_gif_type">Loading gif type</string>
    <string name="loader_gif_type_desc">Select a loader. This is shown while an image is loading</string>
    <string name="load_images">Load Images</string>
    <string name="load_warning">Cant load images. Deactivated in settings</string>
    <string name="find_group">Find groups</string>
    <string name="relogin">Invalid password or username, please relogin.</string>
    <string name="no_username">No username</string>
    <string name="no_pass">No password</string>
    <string name="inv_app_id">Invalid appid</string>
</resources>