<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    tools:context="ng.com.coursecode.piqmessenger.Signin.LoginActivity">
<RelativeLayout
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_alignParentTop="true"
    android:layout_above="@+id/bttm">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:layout_centerInParent="true"
        android:id="@+id/idf"
        android:src="@mipmap/ic_launcher"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/idf"
        android:text="@string/app_name"
        android:textColor="@color/white"
        android:textSize="20sp"
        android:textStyle="bold"
        android:layout_centerHorizontal="true"/>
    </RelativeLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:id="@+id/bttm"
        android:layout_alignParentBottom="true">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/txtButtons"
            android:textAlignment="center"
            android:background="@color/colorPrimaryDark"
            android:id="@+id/log_in"
            android:textSize="16sp"
            android:text="@string/log_in"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/txtButtons"
            android:textAlignment="center"
            android:background="@color/colorAccent"
            android:id="@+id/sign_up"
            android:textSize="16sp"
            android:text="@string/signup"/>

    </LinearLayout>

</RelativeLayout>
