<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:fancy="http://schemas.android.com/apk/res-auto">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/warning"
            android:id="@+id/warning_"/>
        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/c1"
            app:cardElevation="4dp">
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="15dp"
                android:layout_marginRight="7dp"
                android:layout_marginEnd="7dp"
                android:layout_marginLeft="7dp"
                android:layout_marginStart="7dp">
                <de.hdodenhof.circleimageview.CircleImageView
                    android:layout_width="80dp"
                    android:layout_height="80dp"
                    android:id="@+id/prof_pic"
                    android:src="@drawable/user_sample"
                    android:layout_margin="@dimen/mrgin_ppic"
                    android:layout_centerHorizontal="true"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/colorPrimaryDark"
                    android:text="@string/click_image_to_edit"
                    android:layout_below="@id/prof_pic"
                    android:textSize="13sp"
                    android:layout_margin="2dp"
                    android:id="@+id/click"
                    android:layout_centerHorizontal="true"/>
                <com.rengwuxian.materialedittext.MaterialEditText
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:met_floatingLabel="highlight"
                    android:hint="@string/fullname"
                    android:layout_below="@id/click"
                    android:textSize="16sp"
                    android:id="@+id/fullname"
                    android:layout_marginBottom="7dp"
                    android:layout_marginTop="3dp"
                    android:textStyle="bold"
                    android:textAlignment="center"
                    android:minWidth="80dp"
                    app:met_iconLeft="@drawable/ic_person_black_24dp"
                    android:layout_centerHorizontal="true"/>
                <com.rengwuxian.materialedittext.MaterialEditText
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="14sp"
                    android:textStyle="italic|bold"
                    android:id="@+id/username"
                    android:layout_marginBottom="10dp"
                    android:layout_below="@id/fullname"
                    app:met_floatingLabel="highlight"
                    android:hint="@string/username"
                    android:textAlignment="center"
                    android:minWidth="60dp"
                    android:layout_centerHorizontal="true"/>
            </RelativeLayout>

        </android.support.v7.widget.CardView>
        <View
            android:layout_width="match_parent"
            android:layout_height="5dp"/>
        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:cardElevation="4dp">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:orientation="vertical">
                <com.rengwuxian.materialedittext.MaterialEditText
                    app:met_floatingLabel="highlight"
                    android:hint="@string/description"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:textSize="14sp"
                    android:ellipsize="end"
                    app:met_iconLeft="@drawable/ic_chrome_reader_mode_black_24dp"
                    android:id="@+id/bio_content"/>
            </LinearLayout>
        </android.support.v7.widget.CardView>
        <View
            android:layout_width="match_parent"
            android:layout_height="5dp"/>

        <com.rilixtech.materialfancybutton.MaterialFancyButton
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/prof_msg"
            fancy:mfb_text="@string/view_members"
            fancy:mfb_icon="@string/fawi_eye"
            fancy:mfb_textSize="14sp"
            style="@style/mat_fancy_profile"
            android:layout_margin="10dp"/>
    </LinearLayout>
</android.support.v4.widget.NestedScrollView>