<!--<ScrollView-->
    <!--xmlns:android="http://schemas.android.com/apk/res/android"-->
    <!--xmlns:tools="http://schemas.android.com/tools"-->
    <!--android:layout_width="match_parent"-->
    <!--android:layout_height="wrap_content">-->
    <RelativeLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:background="@color/colorPrimary"
        tools:context="ng.com.coursecode.piqmessenger.Signin.LoginActivity">
        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_above="@+id/bttm">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:padding="40dp"
                android:orientation="vertical">
                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="70dp"
                    android:id="@+id/idf"
                    android:src="@mipmap/ic_launcher"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/app_name"
                    android:textColor="@color/white"
                    android:layout_gravity="center_horizontal"
                    android:textSize="20sp"
                    android:textStyle="bold"
                    android:layout_marginBottom="15dp"/>
                <com.rengwuxian.materialedittext.MaterialEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="16sp"
                    app:met_bottomTextSize="14sp"
                    app:met_floatingLabelTextSize="14sp"
                    android:maxLines="1"
                    android:id="@+id/username_sign"
                    android:hint="@string/username"
                    app:met_minCharacters="2"
                    android:textColor="@color/white"
                    app:met_textColor="@color/white"
                    app:met_floatingLabel="highlight"
                    app:met_textColorHint="@color/white"
                    app:met_iconPadding="0dp"
                    app:met_iconLeft="@drawable/ic_person_black_24dp"/>
                <com.rengwuxian.materialedittext.MaterialEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="16sp"
                    android:maxLines="1"
                    app:met_bottomTextSize="14sp"
                    app:met_floatingLabelTextSize="14sp"
                    android:id="@+id/pass_sign"
                    app:met_textColorHint="@color/white"
                    android:textColor="@color/white"
                    app:met_textColor="@color/white"
                    android:hint="@string/password"
                    app:met_floatingLabel="highlight"
                    app:met_iconPadding="0dp"
                    app:met_iconLeft="@drawable/ic_lock_outline_black_24dp"
                    app:met_minCharacters="2"/>
            </LinearLayout>
        </RelativeLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:id="@+id/bttm"
            android:layout_alignParentBottom="true">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/txtButtons"
                android:textAlignment="center"
                android:background="@color/colorPrimaryDark"
                android:id="@+id/log_in"
                android:text="@string/log_in"/>

        </LinearLayout>

    </RelativeLayout>
<!--</ScrollView>-->